# test

./: ASP.NET Core C# WebApp  AWS codepipelline and codebuilder  Ansible  Build app using React JS, .NET Core Web API and Microsoft SQL Server  BuildCamk  BuildCmake  BuildVTK  Centos & qt  Cmake-Builder  Create AWS  Create SQLite  Creating Demo APIs with json-server  Docker and pull image to run  Harvard CS50’s Web Programming with Python and JavaScript – Full University Course  Home networking and systems setup  Infrastructure Developer  Integrate Allied Electronics into a POS fuel system using .NET  IntelliJ IDEA - Gradle - JAVA  Interview Q&A  Linux Server Setup  MS Azure Setup  Mac_VitualBox  Make an App With ChatGPT  PowserShell  Printer Wifi Connection  Python AI programming  Python Scripting and AWS automation  Python program DeepSeek AI api  REST API in Spring boot using Java  React JS  React js Tutorial - How To Get Data From An API with React  Remote Desktop Connection Setup  SOLID concepts  Scada  Set Git Server or Git Hub In Server  Set Git Server or Git HubIn Server  VM_Mac_XCode  Vcpkg_Camke_GitHub  VitualBox_Mac_XCode  Web Clouding architectural  (+9 more)
Cmake-Builder/: .gitignore  CMakeLists.txt  Cmake-Builder-Readme.txt  exp.cxx  vtkbool-testing.cxx
Cmake-Builder/BarExe/: CMakeLists.txt  bar.cxx
Cmake-Builder/Bar_exe/: CMakeLists.txt  bar.c
Cmake-Builder/FooBar/foo/: foo.h
Cmake-Builder/FooLib/: CMakeLists.txt  fooConfig.cmake.in  fooVersionConfig.cmake.in
Cmake-Builder/Foo_lib/: CMakeLists.txt  FooBarConfig.cmake.in
Cmake-Builder/Foo_lib/foo/: CMakeLists.txt
Cmake-Builder/sqlite3/src/: shell.c
Cmake-Builder/sqlite4/: CMakeLists.txt  sqlite4Config.cmake.in  sqlite4VersionConfig.cmake.in
Cmake-Builder/vtkbool-master/: CMakeLists.txt
DNetCoreWebApp/: ASP.NET Core C# WebApp  JokeWebApp.sln  PDSESWebApp.sln  Program.cs  TestWebApp.sln
DNetCoreWebApp/Controllers/: JokesController.cs
DNetCoreWebApp/Data/: ApplicationDbContext.cs  MenuContext.cs
DNetCoreWebApp/Data/Migrations/: ApplicationDbContextModelSnapshot.cs
DNetCoreWebApp/Models/: Dish.cs  DishIngredient.cs
DNetCoreWebApp/PDSESWebApp/: PDSESWebApp.csproj  Program.cs  appsettings.json
DNetCoreWebApp/PDSESWebApp/Controllers/: HomeController.cs  StudentParentsController.cs
DNetCoreWebApp/PDSESWebApp/Data/: ApplicationDbContext.cs
DNetCoreWebApp/PDSESWebApp/Models/: ErrorViewModel.cs  StudentParents.cs
DNetCoreWebApp/PDSESWebApp/Properties/: launchSettings.json
DNetCoreWebApp/PDSESWebApp/Views/: _ViewImports.cshtml
DNetCoreWebApp/TestAppWeb/: Program.cs  TestAppWeb.csproj
DNetCoreWebApp/TestAppWeb/Controllers/: HomeController.cs  JokesController.cs  StudentParentsController.cs
DNetCoreWebApp/TestAppWeb/Data/: ApplicationDbContext.cs  TestAppWebContext.cs
DNetCoreWebApp/TestAppWeb/Migrations/: 20240321205725_initialsetup.Designer.cs  20240321205725_initialsetup.cs  ApplicationDbContext.cs
DNetCoreWebApp/TestAppWeb/Models/: Joke.cs
DNetCoreWebApp/TestAppWeb/Properties/: launchSettings.json
DNetCoreWebApp/TestAppWeb/html/: index.html
DNetCoreWebApp/TestWebApi/: TestAppWeb.http  WeatherForecast.cs
DNetCoreWebApp/TestWebApi/Controllers/: WeatherForecastController.cs
DNetCoreWebApp/TestWebApi/Properties/: launchSettings.json
DNetCoreWebApp/Views/Jokes/: ShowSearchForm.cshtml
DNetCoreWebAppAndApi/: .gitignore  ASP.NET Core C# Web App and Api Readme  DNETCoreWebAppAndAPI.sln
DNetCoreWebAppAndApi/Joke.Data/: JokeData.csproj
DNetCoreWebAppAndApi/Joke.Data/Models/: Joke.cs
DNetCoreWebAppAndApi/JokeWebApi/: JokeWebApi.csproj  JokeWebApi.http  Program.cs  WeatherForecast.cs  appsettings.json
DNetCoreWebAppAndApi/JokeWebApi/Controllers/: ApplicationDbContext.cs  BrandController.cs  JokeAppController.cs  JokesController.cs  WeatherForecastController.cs
DNetCoreWebAppAndApi/JokeWebApi/Migrations/: 20240421204238_initial.Designer.cs  BrandContextModelSnapshot.cs
DNetCoreWebAppAndApi/JokeWebApi/Models/: Brand.cs  BrandContext.cs  Joke.cs
DNetCoreWebAppAndApi/JokeWebApi/Properties/: launchSettings.json
DNetCoreWebAppAndApi/JokeWebApi/Services/: AuthenticationFilter.cs  BrandServices.cs  IBrandServices.cs
DNetCoreWebAppAndApi/JokeWebApp/: JokeWebApp.csproj
DNetCoreWebAppAndApi/JokeWebApp/Controllers/: BrandApiController.cs  JSAppController.cs  JokeApiController.cs  JokeAppController.cs
DNetCoreWebAppAndApi/JokeWebApp/Data/: ApplicationDbContext.cs
DNetCoreWebAppAndApi/JokeWebApp/Models/: Brand.cs  Ingredient.cs  JokeApi.cs  JokeApp.cs  Menu.cs  Person.cs
DNetCpreWebApp/: appsettings.json
DNetCpreWebApp/Controllers/: JokesController.cs
DNetCpreWebApp/Properties/: launchSettings.json
Dascom/: Card Printer SDK  Dascom\PrintTek Printers  Dsacom Card Printer  Mobile Printer SDK  SDK  SDK emulator for windows, android and IOS  android studio tutorial for beginners windows 10
DnetCoreTestAppWeb/: DnetCoreTestAppWeb.sln
DnetCoreTestAppWeb/DnetCoreTestAppWeb/: Program.cs  TestAppWeb.csproj
DnetCoreTestAppWeb/DnetCoreTestAppWeb/Controllers/: HomeController.cs  StudentParentsController.cs
DnetCoreTestAppWeb/TestAppWebApi/: TestAppWebApi.http
Java-Gradle/: Readme.md  build.gradle
JokeWebApp/: JokeWebApp.csproj
JokeWebApp/Controllers/: HomeController.cs
JokeWebApp/Data/: ApplicationDbContext.cs
JokeWebApp/Models/: ErrorViewModel.cs  Joke.cs
ReciptBook.api/: ReciptBook.api.sln
ReciptBook.api/ReciptBook.api/: ReciptBook.api.http  WeatherForecast.cs
RestFulServiceAPI/: Program.cs  RestFulServiceAPI.sln  Startup.cs  WeatherForecast.cs
RestFulServiceAPI/Controllers/: HomeController.cs  WeatherController.cs  WeatherForecastController.cs
RestFulServiceAPI/Models/: WeatherInfo.cs
RestFulServiceAPI/Properties/: launchSettings.json
SpringMVCdemo/: REST API in Spring boot using Java  pom.xml
WebService.REST/: Global.asax  WebService.REST.sln  WebService.REST.vbproj
WebService.REST/My Project/: AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
WebService.REST/Views/: web.config
website-html-css/wwwroot/: index.html  web.xml
(+102 files in other folders)
